调整dockerfile auto.sh增加前台运行run命令